feat(#83): remove old service to fetch the jjit offers